--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -16,3 +16,8 @@
   git: repo=https://github.com/tmux-plugins/tpm dest=/home/{{user}}/.tmux/plugins/tpm
   become: yes
   become_user: "{{user}}"
+
+- name: Install Vundle
+  git: repo=https://github.com/VundleVim/Vundle.vim.git dest=~/.vim/bundle/Vundle.vim
+  become: yes
+  become_user: "{{user}}"
